force-app/main/default/objects/Institucion__c/Institucion__c.object-meta.xml
<CustomObject>
    <label>Institución</label>
    <nameField>
        <label>Nombre de la Institución</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instituciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>