force-app/main/default/objects/Institucion__c/fields/Contrase_a__c.field-meta.xml
<CustomField>
    <fullName>Contrase_a__c</fullName>
    <label>Contraseña</label>
    <length>50</length>
    <type>Text</type>
</CustomField>