force-app/main/default/objects/Institucion__c/fields/Ejecutivo_de_Institucion__c.field-meta.xml
<CustomField>
    <fullName>Ejecutivo_de_Institucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ejecutivo de Institución</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Instituciones</relationshipLabel>
    <relationshipName>Instituciones</relationshipName>
    <type>Lookup</type>
</CustomField>