force-app/main/default/objects/Institucion__c/fields/Pagina_Web__c.field-meta.xml
<CustomField>
    <fullName>Pagina_Web__c</fullName>
    <label>Página Web</label>
    <type>Url</type>
</CustomField>