force-app/main/default/objects/Institucion__c/validationRules/Estatus_requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>Estatus_requerido</fullName>
    <active>true</active>
    <description>El campo Estatus es obligatorio en toda institución.</description>
    <errorConditionFormula>ISPICKVAL(Estatus__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Estatus__c</errorDisplayField>
    <errorMessage>El campo Estatus es obligatorio.</errorMessage>
</ValidationRule>