force-app/main/default/objects/Institucion__c/validationRules/Tipo_requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>Tipo_requerido</fullName>
    <active>true</active>
    <description>El campo Tipo es obligatorio en toda institución.</description>
    <errorConditionFormula>ISPICKVAL(Tipo__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Tipo__c</errorDisplayField>
    <errorMessage>El campo Tipo es obligatorio.</errorMessage>
</ValidationRule>